# Gnomio

./: .gitignore  CMakeLists.txt  cmake_run.bat
Resources/: resources.rc
include/Processes/: MCProcess.h  MCProcessManager.h
include/Processes/OCR/: OCREngine.h
src/: main.cpp
src/Minecraft/Authentication/: MCAuth.cpp  MCAuth.h
src/Processes/: MCProcess.cpp  MCProcess.h  MCProcessManager.cpp
src/Processes/OCR/: OCREngine.cpp  OCREngine.h
